@@ -29,8 +29,8 @@ function rcmail_editor_init(skin_path)
                  theme_advanced_toolbar_align : 'left',
                  extended_valid_elements : 'font[face|size|color|style],span[id|class|align|style]',
                  content_css : skin_path + '/editor_content.css',
-                 popups_css : skin_path + '/editor_popup.css',
-                 editor_css : skin_path + '/editor_ui.css'
+                 editor_css : skin_path + '/editor_ui.css',
+                 external_image_list_url : 'program/js/editor_images.js'
                });
   }
 
